[project]
name = "fluke5440b_async"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "A Python AsyncIO library for the Fluke 5440B voltage calibrator."
readme = "README.md"
license = { text="GNU General Public License v3 (GPLv3)" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
]
keywords = ["Fluke 5440B", "GPIB", "API"]
dynamic = ["version"]
dependencies = [
    "typing-extensions; python_version <'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/pyAsyncFluke5440B"
"Bug Tracker" = "https://github.com/PatrickBaus/pyAsyncFluke5440B/issues"
"Download" = "https://github.com/PatrickBaus/pyAsyncFluke5440B/releases"

[project.optional-dependencies]
linux-gpib = ["async-gpib", "gpib-ctypes"]

prologix-gpib = ["prologix-gpib-async"]

dev = [
    "async-gpib", "black", "build", "gpib-ctypes", "isort", "mypy", "pre-commit", "prologix-gpib-async", "pylint",
    "twine",
]

doc = [
    "myst-parser", "sphinx",
]

test = [
    "mypy", "pylint",
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = [
    "setuptools>=61.0",
    "typing-extensions; python_version <'3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fluke5440b_async.__version__"}
